@@ -70,7 +70,7 @@ namespace SolidCP.Portal.VPS
             //KD FSJ
             // load package context
             PackageContext cntx = PackagesHelper.GetCachedPackageContext(PanelSecurity.PackageId);
-            QuotaValueInfo cpuQuota2 = cntx.Quotas[Quotas.VPS2012_CPU_NUMBER];
+            QuotaValueInfo cpuQuota2 = cntx.Quotas[Quotas.VPS_CPU_NUMBER];
             if (cpuQuota2.QuotaAllocatedValue > cpuQuota2.QuotaUsedValue)
             {
                 wizard.Visible = true;
@@ -129,11 +129,8 @@ namespace SolidCP.Portal.VPS
             }
 
             //for (int i = 1; i < maxCores + 1; i++)
-            //    ddlCpu.Items.Add(i.ToString());
-
-            // ddlCpu.SelectedIndex = ddlCpu.Items.Count - 1; // select last (maximum) item
-
-            QuotaValueInfo cpuQuota2 = cntx.Quotas[Quotas.VPS2012_CPU_NUMBER];
+            //KD FSJ
+            QuotaValueInfo cpuQuota2 = cntx.Quotas[Quotas.VPS_CPU_NUMBER];
             if (cpuQuota2.QuotaAllocatedValue >= cpuQuota2.QuotaUsedValue)
             {
                 for (int i = 1; i < (cpuQuota2.QuotaAllocatedValue + 1 - cpuQuota2.QuotaUsedValue); i++)
@@ -147,8 +144,6 @@ namespace SolidCP.Portal.VPS
                 ddlCpu.Items.Add("0");
 
             }
-
-
 
             // external network details
             if (PackagesHelper.IsQuotaEnabled(PanelSecurity.PackageId, Quotas.VPS_EXTERNAL_NETWORK_ENABLED))
